k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: maops-platform
  labels:
    app.kubernetes.io/name: maops-kubernetes-platform
    app.kubernetes.io/instance: maops-kubernetes-platform-day4
    app.kubernetes.io/version: "0.4.0"
    app.kubernetes.io/part-of: maops-kubernetes-platform
    app.kubernetes.io/managed-by: kustomize
