k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maops-app
  namespace: maops-platform
  labels:
    app.kubernetes.io/name: maops-kubernetes-platform
    app.kubernetes.io/instance: maops-kubernetes-platform-day1
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/component: app
    app.kubernetes.io/part-of: maops-kubernetes-platform
    app.kubernetes.io/managed-by: kustomize
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: maops-kubernetes-platform
      app.kubernetes.io/instance: maops-kubernetes-platform-day1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: maops-kubernetes-platform
        app.kubernetes.io/instance: maops-kubernetes-platform-day1
        app.kubernetes.io/version: "0.1.0"
        app.kubernetes.io/component: app
        app.kubernetes.io/part-of: maops-kubernetes-platform
        app.kubernetes.io/managed-by: kustomize
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: maops-app
          image: maops-kubernetes-platform:0.1.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 50m
              memory: 32Mi
            limits:
              cpu: 250m
              memory: 128Mi
          startupProbe:
            httpGet:
              path: /livez
              port: http
            periodSeconds: 2
            failureThreshold: 15
            timeoutSeconds: 1
          livenessProbe:
            httpGet:
              path: /livez
              port: http
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /readyz
              port: http
            initialDelaySeconds: 0
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3
